trybuild-qcell/src/compiletest/tcell-12.stderr
error[E0277]: `Cell<i32>` cannot be shared between threads safely
   --> src/compiletest/tcell-12.rs:15:24
    |
15  |     std::thread::spawn(|| owner.ro(&cell).set(200));  // Compile fail
    |     ------------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Cell<i32>` cannot be shared between threads safely
    |     |
    |     required by a bound introduced by this call
    |
    = help: the trait `Sync` is not implemented for `Cell<i32>`
    = note: required for `TCell<Marker, Cell<i32>>` to implement `Sync`
    = note: required for `&TCell<Marker, Cell<i32>>` to implement `Send`
note: required because it's used within this closure
   --> src/compiletest/tcell-12.rs:15:24
    |
15  |     std::thread::spawn(|| owner.ro(&cell).set(200));  // Compile fail
    |                        ^^
note: required by a bound in `spawn`
   --> $RUST/std/src/thread/mod.rs
    |
    |     F: Send + 'static,
    |        ^^^^ required by this bound in `spawn`
